--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Your Name <No Email Provided>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+torch = "^1.7.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
