--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,9 @@
 repos:
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: ''  # Use the sha / tag you want to point at
+    hooks:
+      - id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
   - repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
