--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 torch = "^1.7.1"
 click = "^7.1.2"
 torchvision = "^0.8.2"
+mypy = "^0.790"
+pytest-mypy = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
