--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ click = "^7.1.2"
 torchvision = "^0.8.2"
 mypy = "^0.790"
 pytest-mypy = "^0.8.0"
+tqdm = "^4.55.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
