--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ torchvision = "^0.8.2"
 mypy = "^0.790"
 pytest-mypy = "^0.8.0"
 tqdm = "^4.55.2"
+Pillow = "^8.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
