--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,17 @@ python = "^3.9"
 torch = "^1.7.1"
 click = "^7.1.2"
 torchvision = "^0.8.2"
-mypy = "^0.790"
-pytest-mypy = "^0.8.0"
 tqdm = "^4.55.2"
 Pillow = "^8.1.0"
-pyflakes = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 pytest = "^6.0.1"
 pre-commit = "^2.8.2"
+ipykernel = "^5.4.2"
+pyflakes = "^2.2.0"
+pytest-mypy = "^0.8.0"
+mypy = "^0.790"
 
 [build-system]
 requires = ["poetry>=0.12"]
