--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,19 @@
 {
-    "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
-    "python.autoComplete.extraPaths": [
-        "./"
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "black-formatter.interpreter": [
+        "${workspaceFolder}/.venv/bin/python"
     ],
-    "python.linting.enabled": true,
-    "python.linting.lintOnSave": true,
-    "python.formatting.provider": "black",
-    "python.formatting.blackPath": "${workspaceFolder}/.venv/bin/black",
-    "python.formatting.blackArgs": [
+    "black-formatter.args": [
         "--line-length",
-        "120",
+        "120"
     ],
+    "python.terminal.activateEnvironment": false,
+    "notebook.lineNumbers": "on",
+    "notebook.output.wordWrap": true,
+    "jupyter.notebookFileRoot": "${workspaceFolder}",
+    "editor.formatOnSave": true,
     "autoDocstring.docstringFormat": "google",
     "autoDocstring.generateDocstringOnEnter": true,
     "autoDocstring.startOnNewLine": false,
     "autoDocstring.guessTypes": true,
-    "pythonTestExplorer.testFramework": "pytest",
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestPath": "${workspaceFolder}/.venv/bin/pytest",
-    "python.testing.cwd": "${workspaceFolder}",
-    "python.testing.autoTestDiscoverOnSaveEnabled": true,
-    "python.testing.pytestArgs": [
-        "${workspaceFolder}/morpheus/tests",
-        "--disable-warnings",
-        "-s"
-    ],
-    "python.workspaceSymbols.exclusionPatterns": [
-        "**/site-packages/**",
-    ],
 }
