--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,22 +5,18 @@ description = ""
 authors = ["Gabriella Melki <gabriellamelki@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-torch = "^1.7.1"
-click = "^7.1.2"
-torchvision = "^0.8.2"
-tqdm = "^4.55.2"
-Pillow = "^8.1.0"
+python = "^3.11"
+torch = "^2.2.1"
+torchvision = "^0.17.1"
+ipykernel = "^6.29.3"
+click = "^8.1.7"
+tqdm = "^4.66.2"
+pillow = "^10.2.0"
 
-[tool.poetry.dev-dependencies]
-black = "^20.8b1"
-pytest = "^6.0.1"
-pre-commit = "^2.8.2"
-ipykernel = "^5.4.2"
-pyflakes = "^2.2.0"
-pytest-mypy = "^0.8.0"
-mypy = "^0.790"
+[tool.poetry.group.dev.dependencies]
+black = "^24.3.0"
+pytest = "^8.1.1"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
