--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -9,15 +9,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8.6'
+          python-version: '3.11.3'
           architecture: 'x64'
       - name: Install Virtual Environment
         run: |
           sudo apt-get update
           sudo apt-get install curl
-          curl -sSL  curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+          curl -sSL https://install.python-poetry.org | python -
       - name: Run Unit Tests
         run: |
           printenv
           "${HOME}/.poetry/bin/poetry" install
-          "${HOME}/.poetry/bin/poetry" run pytest --cov=python_template/src python_template/tests/
+          "${HOME}/.poetry/bin/poetry" run pytest --cov=omni_model/src omni_model/tests/
